# root_minimizers_tests

./: CMakeLists.txt  Makefile  Rosenbrock.root  fitBenchmark.C  fitBenchmark.out  fitBenchmark.root  fitBenchmarkAD.root  fitBenchmark_histos_s1433857104_n1000.root  fitBenchmark_histos_s1539903260_n1000.root  ipopt_langauss.C  ipopt_langauss.out  out.txt  r_langauss.C  r_langauss.out  root_langauss.C  root_langauss.out  rosenbrock.C  rosenbrock.out  run_fitBenchmark.C  scipy.C  scipy_const..out  scipy_const.C  scipy_langauss.C  scipy_langauss.out  test.cxx  test_class.cxx  test_good.cxx
